# doc_diff

./: .gitignore  README.md  main.py  pyproject.toml  test.py
