[project]
name = "DocDiff"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.4",
    "python-docx>=1.2.0",
    "python-levenshtein>=0.27.3",
    "rank-bm25>=0.2.2",
    "scikit-learn>=1.8.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
